--- a/static/admin_dashboard_bees.html
+++ b/static/admin_dashboard_bees.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panel de Administración - LA CANTA QUE RANA</title>
     <link rel="stylesheet" href="/static/admin_styles_bees.css">
+    <link rel="stylesheet" href="/static/admin_pages/bees-base.css">
+    <link rel="stylesheet" href="/static/admin_pages/dashboard.css">
+    <link rel="stylesheet" href="/static/admin_pages/inventory.css">
+    <link rel="stylesheet" href="/static/admin_pages/queue.css">
     <link rel="stylesheet" href="/static/admin_pages/reports.css">
+    <link rel="stylesheet" href="/static/admin_pages/settings.css">
 </head>
 
 <body>
