--- a/static/admin_pages/accounts.html
+++ b/static/admin_pages/accounts.html
@@ -48,12 +48,16 @@
 <!-- Create Mesa Modal -->
 <div id="create-mesa-modal"
     style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); z-index:2020; align-items:center; justify-content:center;">
-    <div class="card" style="width: 400px;">
+    <div class="card" style="width: 450px;">
         <h3>Crear Nueva Mesa</h3>
         <form id="create-mesa-form">
             <div class="form-group">
-                <label for="mesa-name">Nombre de la Mesa</label>
-                <input type="text" id="mesa-name" name="nombre" placeholder="Ej: Mesa 1, VIP, etc." required>
+                <label for="mesa-numero">Número de Mesa</label>
+                <input type="number" id="mesa-numero" name="numero" placeholder="Ej: 1, 2, 3..." min="1" required>
+            </div>
+            <div class="form-group">
+                <label for="mesa-nombre">Nombre Personalizado (Opcional)</label>
+                <input type="text" id="mesa-nombre" name="nombre" placeholder="Ej: Toscana, VIP, Rincón, etc.">
             </div>
             <div style="display:flex; gap:10px; margin-top:20px;">
                 <button type="submit" class="form-btn" style="flex:1; background-color: var(--success-color);">Crear Mesa</button>
