--- a/static/admin_dashboard.html
+++ b/static/admin_dashboard.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/static/admin_pages/queue.css">
     <link rel="stylesheet" href="/static/admin_pages/reports.css">
     <link rel="stylesheet" href="/static/admin_pages/settings.css">
+    <link rel="stylesheet" href="/static/admin_pages/admin_modals.css">
 </head>
 
 <body>
@@ -23,7 +24,6 @@
             <li><a href="#inventory" class="nav-link">Inventario</a></li>
             <li><a href="#accounts" class="nav-link">Cuentas por Mesa</a></li>
             <li><a href="#reports" class="nav-link">Reportes</a></li>
-            <li><a href="#tables" class="nav-link">Mesas y QR</a></li>
             <li><a href="#settings" class="nav-link">Configuración</a></li>
         </ul>
         <button class="logout-btn" id="logout-btn">Cerrar Sesión</button>
@@ -46,9 +46,8 @@
         <div id="accounts" class="page"></div>
 
         <!-- MODAL PARA REGISTRAR PAGO -->
-        <div id="payment-modal"
-            style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); z-index:2000; align-items:center; justify-content:center;">
-            <div class="card" style="width: 400px;">
+        <div id="payment-modal" class="modal-overlay">
+            <div class="card modal-card-small">
                 <h3 id="payment-modal-title">Registrar Pago</h3>
                 <form id="payment-form">
                     <input type="hidden" id="payment-mesa-id" name="mesa_id">
@@ -65,27 +64,26 @@
                             <option value="Otro">Otro</option>
                         </select>
                     </div>
-                    <div style="display:flex; gap:10px; margin-top:20px;">
-                        <button type="submit" class="form-btn" style="flex:1;">Registrar Pago</button>
-                        <button type="button" id="payment-modal-close" class="form-btn"
-                            style="flex:1; background-color:var(--text-secondary);">Cancelar</button>
+                    <div class="modal-buttons-row">
+                        <button type="submit" class="form-btn modal-button-flex">Registrar Pago</button>
+                        <button type="button" id="payment-modal-close"
+                            class="form-btn modal-button-flex modal-button-secondary">Cancelar</button>
                     </div>
                 </form>
             </div>
         </div>
 
         <!-- MODAL PARA CONFIRMAR SOBREPAGO -->
-        <div id="confirm-overpayment-modal"
-            style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); z-index:2001; align-items:center; justify-content:center;">
-            <div class="card" id="overpayment-card" style="width: 450px;">
+        <div id="confirm-overpayment-modal" class="modal-overlay modal-overlay-high">
+            <div class="card modal-card-medium" id="overpayment-card">
                 <h3>Confirmación de Sobrepago</h3>
                 <p id="overpayment-message">El monto ingresado es mayor que la deuda actual. ¿Deseas registrarlo como un
                     pago adelantado?</p>
-                <div style="display:flex; gap:10px; margin-top:20px;">
-                    <button type="button" id="confirm-overpayment-btn" class="form-btn"
-                        style="flex:1; background-color: var(--success-color);">Sí, continuar</button>
-                    <button type="button" id="cancel-overpayment-btn" class="form-btn"
-                        style="flex:1; background-color:var(--text-secondary);">No, cancelar</button>
+                <div class="modal-buttons-row">
+                    <button type="button" id="confirm-overpayment-btn"
+                        class="form-btn modal-button-flex modal-button-success">Sí, continuar</button>
+                    <button type="button" id="cancel-overpayment-btn"
+                        class="form-btn modal-button-flex modal-button-secondary">No, cancelar</button>
                 </div>
             </div>
         </div>
@@ -99,7 +97,8 @@
     </div>
 
     <!-- Input oculto para la subida de archivos -->
-    <input type="file" id="product-image-upload" accept="image/png, image/jpeg, image/webp" style="display: none;">
+    <input type="file" id="product-image-upload" accept="image/png, image/jpeg, image/webp" class="hidden"
+        aria-label="Subir imagen de producto">
 
     <!-- Contenedor para mostrar las reacciones flotantes -->
     <div id="reaction-container" class="reaction-container"></div>
@@ -560,10 +559,6 @@
                 case 'reports':
                     loadReportsPage();
                     setupReportsListeners();
-                    break;
-                case 'tables':
-                    loadTablesPage();
-                    setupTablesListeners();
                     break;
             }
         }
