cambios en cuentas

--- a/static/admin_pages/accounts.html
+++ b/static/admin_pages/accounts.html
@@ -5,88 +5,8 @@
     </button>
 </div>
 
-<!-- SECCIÓN DE GESTIÓN DE MESAS (INTEGRADA) -->
-<div class="card tables-management-section">
-    <h3 class="tables-management-title">🏷️ Gestión de Mesas y QR</h3>
-    <div class="tables-grid">
-
-        <!-- PANEL 1: GENERADOR DE QR (COMPACTO) -->
-        <div class="tables-panel">
-            <h4 class="tables-panel-header">
-                <span class="tables-panel-icon">🖨️</span> Generador de QR
-            </h4>
-
-            <form id="qr-generator-form">
-                <div class="compact-form-group">
-                    <label for="qr-table-number" class="compact-label">Número de Mesa:</label>
-                    <input type="number" id="qr-table-number" min="1" placeholder="Ej: 5" required
-                        class="compact-input">
-                </div>
-
-                <div class="compact-form-group">
-                    <label for="qr-user-select" class="compact-label">Usuario:</label>
-                    <select id="qr-user-select" class="compact-input">
-                        <option value="1">Usuario 1</option>
-                        <option value="2">Usuario 2</option>
-                        <option value="3">Usuario 3</option>
-                        <option value="4">Usuario 4</option>
-                        <option value="5">Usuario 5</option>
-                        <option value="6">Usuario 6</option>
-                        <option value="7">Usuario 7</option>
-                        <option value="8">Usuario 8</option>
-                        <option value="9">Usuario 9</option>
-                        <option value="10">Usuario 10</option>
-                    </select>
-                </div>
-
-                <button type="submit" class="btn-primary compact-button">
-                    Generar QR
-                </button>
-            </form>
-
-            <div id="qr-result" class="qr-result-area">
-                <p class="qr-result-placeholder">El código QR aparecerá aquí</p>
-            </div>
-        </div>
-
-        <!-- PANEL 2: GESTIÓN (COMPACTO) -->
-        <div class="tables-panel">
-            <h4 class="tables-panel-header">
-                <span class="tables-panel-icon">⚙️</span> Gestión de Mesa
-            </h4>
-
-            <form id="table-management-form">
-                <div class="compact-form-group">
-                    <label for="manage-table-number" class="compact-label">Número de Mesa:</label>
-                    <input type="number" id="manage-table-number" min="1" placeholder="Ej: 5" required
-                        class="compact-input">
-                </div>
-
-                <div class="table-actions-container">
-                    <button type="button" id="btn-activate" class="btn-activate table-action-button">
-                        ✅ Activar Mesa
-                    </button>
-
-                    <button type="button" id="btn-deactivate" class="btn-deactivate table-action-button">
-                        ⏸️ Desactivar Mesa
-                    </button>
-
-                    <button type="button" id="btn-delete" class="btn-delete table-action-button">
-                        🗑️ Eliminar Mesa
-                    </button>
-                </div>
-
-                <div id="management-status" class="table-status-area"></div>
-            </form>
-        </div>
-    </div>
-</div>
-<div class="card">
-    <h3>Cuentas Registradas</h3>
-    <p class="text-secondary">Las cuentas se crean automáticamente al crear una nueva mesa.</p>
-    <div id="accounts-grid" class="grid grid-3">
-        <!-- Las tarjetas de estado de cuenta se generarán aquí -->
-    </div>
+<div id="accounts-grid" class="grid grid-3">
+    <!-- Las tarjetas de mesa se generarán aquí con el nuevo diseño integrado -->
 </div>
 
 <!-- Payment Modal (manejado por admin_dashboard.html) -->
